@@ -49,6 +49,8 @@ Site generator with every source file also looks for a meta file (file with same
 title: My page
 ```
 
+It is possible to normalize the meta info and modify the generated page based on some meta info. Just add meta normalizer to Generator via method addMetaNormalizer. The method accepts a callback. The normalizer will receive 3 parameters: meta info (as array), html code (in string) and name of currently processed file (as string).
+
 Additional assets
 =================
 
